add Cache on gemini chat
