# storage/api-docs/api-docs.json
@@ -203,6 +203,40 @@
                 }
             }
         },
+        "/api/v1/chat/test": {
+            "post": {
+                "tags": [
+                    "Chat"
+                ],
+                "summary": "Envia mensagens para AI",
+                "operationId": "test",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "message"
+                                ],
+                                "properties": {
+                                    "message": {
+                                        "type": "string",
+                                        "format": "text",
+                                        "example": "Me conte uma piada"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Resposta da AI"
+                    }
+                }
+            }
+        },
         "/api/v1/auth/linkedin": {
             "get": {
                 "tags": [
@@ -375,6 +409,10 @@
         {
             "name": "Autenticação",
             "description": "Endpoints de autenticação de usuários"
+        },
+        {
+            "name": "Chat",
+            "description": "Endpoints de envio de mensagens para plataforma"
         },
         {
             "name": "Social",
